Moving code to libraries for reuse

--- a/DiscreteMathLab3/DiscreteMathLab3.csproj
+++ b/DiscreteMathLab3/DiscreteMathLab3.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Graph.Lib.UI\Graph.Lib.UI.csproj" />
     <ProjectReference Include="..\GraphLib\GraphLib.csproj" />
     <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
