--- a/DiscreteMathLab4/DiscreteMathLab4.csproj
+++ b/DiscreteMathLab4/DiscreteMathLab4.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="AdjacencyMatrix.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
